# qsar_qm_models

./: .gitignore  README.md  env.yml  setup.sh
data/: valid_qm9_indices.pth
data/smiles_cache/: cache.db
models/: models.py  qm_models.py  qsar_models.py
preprocessing/: FLuID.py  SConstruct  federate_data.py  libtanimoto.c  libtanimoto.os  ss_utils.py
results/: r2_vs_sigma_ecfp4.html  r2_vs_sigma_randomized_smiles.html  r2_vs_sigma_sample_size_1000.html  r2_vs_sigma_sample_size_10000.html  r2_vs_sigma_sample_size_20000.html  r2_vs_sigma_sample_size_5000.html  r2_vs_sigma_smiles.html  r2_vs_sigma_sns.html  rf_tuning_results.csv  rf_tuning_results_iterations.csv  rf_tuning_results_log.txt  test.csv
rust/: Cargo.toml  build.rs
rust/src/: main.rs
rust_processor/: Cargo.toml  sns_short.py
rust_processor/src/: main.rs
scripts/: clean_noise.py  domain_clustering.py  noise_mitigation.py  noise_strategy_params.json  plot_qspr_results.py  precompute_distances.py  precompute_smiles_cache.py  process_and_train.py  run_qm_qsar_models.py  similarity_calculations.py  sort_slice.py  utils.py
scripts/smiles_cache/: cache.db-shm  cache.db-wal
