[package]
name = "rust_processor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
ndarray = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
cxx = "1.0"
rdkit-sys = "0.4.7"
regex = "1"
memmap2 = "0.9.4"
clap = "4.5.4"
vega_lite_4 = "0.7.0"
rustlearn = "0.5.0"
num-traits = "0.2.19"
rand_distr = "0.4.3"

