[package]
name = "rust_processor"
version = "0.1.0"
edition = "2021"
num_cpus = "1.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = "1.0"
rdkit-sys = "0.4.7"
regex = "1"
ndarray = "0.15.4"
memmap2 = "0.9.4"
clap = "4.5.4"
vega_lite_4 = "0.7.0"
rustlearn = "0.5.0"
num-traits = "0.2.19"
rand_distr = "0.4.3"
pyo3 = "0.21.2"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build]
rustflags = ["-L", "/System/Volumes/Data/opt/anaconda3/envs/polaris/lib/python3.10/site-packages/rdkit/.dylibs"]
